
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* os; } ;


 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int stderr ;
 TYPE_1__* targets ;

int usage(char *progname)
{
 int i;

 fprintf(stderr, "Usage:\n./%s hostname target_num\n");
 for (i = 0; targets[i].os; i++)
  fprintf(stderr, "Target %d: %s\n", i+1, targets[i].os);
 exit(-1);
}
